# saorsa-testnet

./: Cargo.toml  README.md
.claude/skills/vps-test/: SKILL.md
.claude/skills/vps-test/resources/: config-schema.yaml  state-machine.md
.github/workflows/: release.yml
.planning/: ISSUES.md  ROADMAP.md  STATE.md
crates/quic-test/: Cargo.toml
crates/quic-test/src/: bootstrap_peers.rs  communitas.rs  crdt_verification.rs  debug_automation.rs  epidemic_gossip.rs  gossip.rs  gossip_verification.rs  lib.rs  main.rs  peer_discovery.rs  proof_orchestrator.rs
crates/quic-test/src/dashboard/: mod.rs  types.rs
crates/quic-test/src/dht_metrics/: metrics_collector.rs  mod.rs  stats_bridge.rs
crates/quic-test/src/gossip_tests/: crate_tests.rs
crates/quic-test/src/harness/: agent_api.rs  local_agent.rs  matrix_runner.rs
crates/quic-test/src/lib_verification/: gossip_tests.rs  issue_reporter.rs  mod.rs  quic_tests.rs
crates/quic-test/src/mcp/: client.rs  mod.rs
crates/quic-test/src/node/: client.rs  test_protocol.rs
crates/quic-test/src/registry/: mod.rs  store.rs  types.rs
crates/quic-test/src/tui/: app.rs  data_bridge.rs  mod.rs  types.rs  ui.rs
crates/quic-test/src/tui/screens/: adaptive.rs  dht.rs  eigentrust.rs  health.rs  mcp.rs  mod.rs  placement.rs
crates/quic-test/static/: gossip.html  index.html  log.html  matrix.html  overview.html
crates/quic-test/static/css/: dashboard.css
crates/quic-test/static/js/: ws-manager.js
docker/local-testnet/: docker-compose-simple.yml  docker-compose.yml
docker/nat-emulation/: docker-compose.yml
docker/nat-emulation/nat-cgnat/: Dockerfile  entrypoint.sh
docker/nat-emulation/nat-fullcone/: Dockerfile  entrypoint.sh
docker/nat-emulation/nat-portrestricted/: Dockerfile  entrypoint.sh
docker/nat-emulation/nat-restricted/: Dockerfile  entrypoint.sh
docker/nat-emulation/nat-symmetric/: Dockerfile  entrypoint.sh
docs/: NAT-TRAVERSAL.md
docs/infrastructure/: VPS_INFRASTRUCTURE.md
scripts/: deploy-25-nodes-per-vps.sh  deploy-test-network.sh  local-testnet.sh  monitor-network.sh  restart-nodes-25-peers.sh
scripts/nat-simulation/: cleanup-nat.sh  deploy-all-nodes.sh  deploy-nat-type.sh  deploy-to-node.sh  nat-simulation.service  nat-type-addr-restricted.sh  nat-type-full-cone.sh  nat-type-port-restricted.sh  nat-type-public.sh  nat-type-symmetric.sh  saorsa-quic-test-nat.service  setup-nat-base.sh  verify-nat-type.sh
src.old/: main.rs
src.old/deployment/: mod.rs
src.old/logging/: mod.rs
src.old/metrics/: mod.rs
src.old/node/: bootstrap.rs  mod.rs  worker.rs
src.old/testing/: mod.rs
src.old/tui/: mod.rs
