[workspace]
resolver = "2"
members = [
    "crates/quic-test",
    # Future test modules:
    # "crates/gossip-test",
    # "crates/core-test",
    # "crates/node-test",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
authors = ["David Irvine <david.irvine@saorsalabs.com>"]
repository = "https://github.com/dirvine/saorsa-testnet"

[workspace.dependencies]
# Core P2P libraries
ant-quic = "0.18"
saorsa-gossip-transport = "0.2"
saorsa-gossip-pubsub = "0.2"
saorsa-gossip-membership = "0.2"
saorsa-gossip-types = "0.2"
saorsa-gossip-coordinator = "0.2"
saorsa-gossip-identity = "0.2"
saorsa-gossip-crdt-sync = "0.2"
saorsa-gossip-groups = "0.2"
saorsa-gossip-rendezvous = "0.2"

# DHT and network layers (path deps until published)
saorsa-node = { path = "../saorsa-node" }
saorsa-core = { path = "../saorsa-core" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"

# Web/HTTP
warp = "0.3"
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
dashmap = "6"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
bytes = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
humantime-serde = "1"
hostname = "0.4"
dirs = "5.0"
local-ip-address = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# TLS
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std", "tls12"] }

# Embedded assets
rust-embed = "8"
mime_guess = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.test]
opt-level = 2
